# src

aurelia/mono/generate_lat_long/: generate_lat_long.sln
aurelia/mono/generate_lat_long/generate_lat_long/: AssemblyInfo.cs  Main.cs  generate_lat_long.csproj
cpp/sudoku/trunk/: AUTHORS  Makefile.am  configure.in
cpp/sudoku/trunk/src/: Makefile.am  board.cpp  board.hpp  boardBuilder.cpp  boardBuilder.hpp  common.hpp  complexMatchesSolver.cpp  complexMatchesSolver.hpp  constants.hpp  coords.cpp  coords.hpp  inCollectionSolver.cpp  inCollectionSolver.hpp  main.cpp  puzzleGenerator.cpp  puzzleGenerator.hpp  solveProfile.cpp  solveProfile.hpp  solver.cpp  solver.hpp  solverManager.cpp  solverManager.hpp  square.cpp  square.hpp  uniqueInCollectionSolver.cpp  uniqueInCollectionSolver.hpp
cpp/sudoku/trunk/src/testData/: easyFile.xml  evilFile.xml  evilFile2.xml  extremeFile.xml  hardFile.xml  independantDiff.xml  independantInt.xml  independantSimple.xml  invalidFile.xml  mediumFile.xml  paulsPagesTough.xml  testFile.xml  toughFile.xml
python/CoulagFinder/: CoulagFinder_plugin.py  CoulagFinder_plugin_layer.py  CoulagFinder_plugin_layer_type.py  __init__.py
python/misc/: prog.py
ruby/music/: deleteFiles.rb  doStuff.rb  insertMusic.rb  quickadd.rb  taglib.rb
ruby/utils/: ThreadedProcessor.rb  im_baw  im_largethumbs  im_norm  im_thumbs  im_thumbs50
shell_scripts/admin/: backup-svn
shell_scripts/command_line/: ThreadedProcessor.rb  addIdSub  bk  bks  csv2pg  im_thumbs  im_thumbs50  makedvd  mm  myrd  upquick  upshutdown
