# $Author: fraser $
# $Date: 2008-02-17 13:29:43 +0000 (Sun, 17 Feb 2008) $
# $Name$
# $Revision: 40 $
# $Log$
# Revision 1.1  2007/04/09 19:35:39  fraser
# Initial revision
#

AC_INIT(src/main.cpp)

PACKAGE=sudoku
VERSION=0.1.0

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

LIBXML_REQUIRED_VERSION=2.6.26
PKG_CHECK_MODULES(SUDOKU_GTMM, [gtkmm-2.4 >= 2.8.0])
AC_SUBST(SUDOKU_CFLAGS)
AC_SUBST(SUDOKU_LIBS)

PKG_CHECK_MODULES(SUDOKU_LIBXML, libxml-2.0 >= $LIBXML_REQUIRED_VERSION)
AC_SUBST(SUDOKU_LIBXML_CFLAGS)
AC_SUBST(SUDOKU_LIBXML_LIBS)

AC_PROG_CXX
AC_OUTPUT(Makefile src/Makefile)

